Make GC in JVM run concurrently